// Copyright IBM Corp. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package validation.v1;

option go_package = "github.com/sykesm/batik/pkg/pb/validation/v1;validationv1";

import "tx/v1/transaction.proto";

// A ResolvedTransaction is a transaction where all state references have been
// resolved.
message ResolvedTransaction {
  bytes txid = 1;
  repeated tx.v1.State inputs = 2;
  repeated tx.v1.State references = 3;
  repeated tx.v1.State outputs = 4;
  repeated tx.v1.Parameter parameters = 5;
  repeated tx.v1.Party required_signers = 6;
  repeated tx.v1.Signature signatures = 7;
}
